# claude-sdk-rust

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: agents.rs  hooks.rs  include_partial_messages.rs  max_budget.rs  mcp_calculator.rs  n8n_chat.rs  plugin_example.rs  quick_start.rs  setting_sources.rs  stderr_callback.rs  streaming_mode.rs  system_prompt.rs  tool_permission_callback.rs
scripts/: initial-setup.sh  pre-push  update_version.py
src/: client.rs  config.rs  env.rs  error.rs  hooks.rs  lib.rs  message.rs  permission.rs  query.rs
src/internal/: client.rs  message_parser.rs  mod.rs  query.rs
src/mcp/: mod.rs
src/transport/: mod.rs  subprocess_cli.rs
tests/: client_integration.rs  e2e_basic.rs  query_one_shot.rs
tests/common/: mod.rs
