[package]
name = "sdk-claude-rust"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for interacting with Claude Code CLI"
authors = ["Anthropic"]
license = "MIT"

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util"] }
tokio-stream = "0.1"
tempfile = "3.13"
users = "0.11"
which = "6.0"
dirs = "5.0"
